# cargo-workspace-playground

./: Cargo.toml  README.md
.github/workflows/: CI.yml
calculator/: Cargo.toml
calculator/src/: main.rs
examples/: Cargo.toml
examples/src/: main.rs
subtract/: Cargo.toml
subtract/src/: lib.rs
sum/: Cargo.toml
sum/src/: lib.rs
