[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtract = { version = "0.1.0", git = "https://github.com/wada-avita/cargo-workspace-playground" }
sum = { version = "0.1.0", git = "https://github.com/wada-avita/cargo-workspace-playground" }
